Add ghp-import instructions

--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,17 @@
-This is my resume. Use [pandoc][1] to compile it into html:
+This is my resume. Use [pandoc][1] to compile it into html.
 
 ```bash
+# Assuming you're on Ubuntu, otherwise you'd probably know how to (google how
+# to) install pandoc on your system of choice.
+sudo apt-get install pandoc
 pandoc -s index.mkd -o html/index.html -c style.css
+```
+
+To push to GitHub Pages:
+
+```bash
+sudo pip install ghp-import
+ghp-import -p -n html
 ```
 
 [1]: http://johnmacfarlane.net/pandoc/
