--- a/index.mkd
+++ b/index.mkd
@@ -42,5 +42,5 @@
 ### Royal Melbourne Institute of Technology Vietnam (RMIT Vietnam)
 #### Bachelor of Information Technology (2012 - 2014)
 
-- Received full scholarship for the whole Bachelor program
+- Received full scholarship for the Bachelor program
 - Graduated with High Distinction
