whoops, there's no "Hight Distinction"

--- a/index.mkd
+++ b/index.mkd
@@ -43,4 +43,4 @@
 #### Bachelor of Information Technology (2012 - 2014)
 
 - Received full scholarship for the Bachelor program
-- Graduated with High Distinction
+- Graduated with Distinction
